--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Ignore Gradle project-specific cache directory
-.gradle
-
-# Ignore Gradle build output directory
-build
+.gradle/
+.settings/
+app/.settings/
+app/bin/
+app/build/
+bin/
