--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,7 +36,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: test-results
-        path: build/reports/tests/test/
+        path: test-results
     
     - name: Publish Test Results as Github Pages
       uses: peaceiris/actions-gh-pages@v3
