--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@
  */
 
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
-    id 'application'
+    // Apply the java-library plugin to add support for Java Library
+    id 'java-library'
 }
 
 repositories {
