--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,5 +25,10 @@ jobs:
         
     - name: Build with Gradle
       run: ./gradlew build
-        
+
+    - name: Archive Test Results
+      uses: actions/upload-artifact@v2
+      with:
+        name: test-results
+        path: build/reports/tests/test/    
 
