--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,7 +9,9 @@ on:
 permissions:
   contents: read
   security-events: write
-
+defaults:
+  run:
+    working-directory: test-CI-CD-A
 jobs:
   build:
 
@@ -30,5 +32,5 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: test-results
-        path: ${{ github.workspace }}/build/reports/tests/test/    
+        path: build/reports/tests/test/    
 
