--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,18 +29,19 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: test-results
-        path: build/reports/tests/test/    
+        path: build/reports/tests/test/   
+    - name: Create Directories
+      run: |
+        mkdir -p ./test-results/main/
+        mkdir -p ./test-results/prueba/ 
 
     - name: Download Test Results
       uses: actions/download-artifact@v2
       with:
         name: test-results
-        path: test-results
+        path: test-results/prueba/
     
-    - name: Create Directories
-      run: |
-        mkdir -p ./test-results/main/
-        mkdir -p ./test-results/prueba/
+
 
     - name: Publish Test Results as Github Pages (Main)
       if: github.ref == 'refs/heads/main'
